Add styling datatarget button

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -26,7 +26,8 @@
     "DELETE": "Slet applikation",
     "NAME": "Applikationens navn",
     "DESCRIPTION": "Applikationens beskrivelse",
-    "ATTACHED-IOT": "Tilknyttede IoT enheder"
+    "ATTACHED-IOT": "Tilknyttede IoT enheder",
+    "DATATARGET-SHOW": "Tilknyttede datatargets"
   },
   "GATEWAY": {
     "DESCRIPTION": "LoRaWAN Gateway beskrivelse",
