IOT-44: Users: GlobalAdmin

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -351,6 +351,10 @@
       "PERMISSIONS": "Brugergrupper",
       "APPLICATIONS": "Applikationer",
       "NAME-PLACEHOLDER": "Navn"
+    },
+    "GLOBAL_ADMIN": {
+      "TRUE": "Ja",
+      "FALSE": ""
     }
   }
 }
