IOT-264 remove isDisabled, add get deviceprofile on selec

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -184,15 +184,13 @@
     "NETWORKSESSIONKEY-PLACEHOLDER": "Indtast Network session key",
     "APPLICATIONSESSIONKEY": "Applicationsessionkey",
     "APPLICATIONSESSIONKEY-PLACEHOLDER": "Indtast application session key",
-    "ISDISABLED": "Enheden skal deaktiveres",
-    "ISDISABLED-NO": "Nej",
-    "ISDISABLED-YES": "Ja",
     "DEVEUI": "Enheds EUI",
     "DEVEUI-PLACEHOLDER": "Enheds EUI",
     "SKIPFCNTCHECK": "SkipFCntCheck",
     "SKIPFCNTCHECK-NO": "Nej",
     "SKIPFCNTCHECK-YES": "Ja",
     "OTAA": "Over The Air Activation",
+    "OTAA-ABP-CONFIG-HELP": "Du vælger din aktivation type via device profile",
     "ABP": "Activation By Personalisation",
     "CHOOSE-SERVICEPROFILE": "Vælg service profile",
     "CHOOSE-DEVICE": "Vælg device profile",
@@ -258,7 +256,6 @@
       "DEVADDR": "devADDR",
       "NETWORKSESSIONKEY": "Netværks session key",
       "APPLICATIONSESSIONKEY": "Applikation session key",
-      "ISDISABLED": "Er aktiv",
       "SKIPFCNTCHECK": "skipfcntcheck"
     }
   },
