--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -126,28 +126,59 @@
     "APPLICATION-COUNT": "Applikationer",
     "SAVE": "Gem organisation",
     "EDIT": "Rediger organisation",
+    "DROPDOWN": "Håndter organisation",
     "DETAIL": {
-      "APPLICATIONS": "Applikationer",
+      "APPLICATIONS": "Organisationens applikationer",
       "PERMISSIONS": "Brugergrupper",
       "NAME": "Navn"
+    },
+    "FORM": {
+      "NAME": "Indtast organisationens navn",
+      "NAME-PLACEHOLDER": "Indtast organisationens navn",
+      "CANCEL": "Annuller",
+      "SAVE": "Gem organisation",
+      "CREATE-NEW-ORGANISATION": "Opret organisation"
     }
+  },
+  "ORGANISATION-TABLE-ROW": {
+    "EDIT": "Redigér",
+    "DELETE": "Slet"
   },
   "PERMISSION": {
     "NAME": "Navn",
     "ORGANISATION": "Organisation",
     "NUMBER_OF_MEMBERS": "Antal medlemmer",
     "TYPE": "Type af brugergruppe",
-    "NO_ORGANISATION": "N/A"
+    "NO_ORGANISATION": "N/A",
+    "DETAIL": {
+      "TYPE": "Adgangstype: ",
+      "ORG": "Organisations: ",
+      "DROPDOWN": "Håndter Brugergruppe",
+      "EDIT": "Rediger",
+      "DELETE": "Slet"
+    },
+    "EDIT": {
+      "NAME": "Indtast brugergruppens navn",
+      "NAME-PLACEHOLDER": "Brugergruppens navn",
+      "TYPE": "Rettigheder",
+      "TYPE-PLACEHOLDER": "Adgangs rettigheder",
+      "USERS": "Vælg brugere",
+      "USERS-PLACEHOLDER": "Brugere",
+      "ORG": "Vælg en organisation",
+      "ORG-PLACEHOLDER": "Organisation",
+      "APPS": "Vælg en applikation",
+      "APPS-PLACEHOLDER": "Applikationer"
+    },
+    "TABLE-ROW": {
+      "EDIT": "Rediger",
+      "DELETE": "Slet"
+    }
   },
   "PERMISSION-TYPE": {
     "GlobalAdmin": "Global Administrator",
     "OrganizationAdmin": "Organisations Administrator",
     "Write": "Skrive-rettigheder",
     "Read": "Læse-rettigheder"
-  },
-  "ORGANISATION-TABLE-ROW": {
-    "EDIT": "Redigér",
-    "DELETE": "Slet"
   },
   "FORM": {
     "CREATE-NEW-APPLICATION": "Opret ny applikation",
@@ -372,6 +403,10 @@
       "SAVE": "Gem Bruger"
     },
     "DETAIL": {
+      "LAST-LOGIN": "Sidste login: ",
+      "NO-LOGIN": "Ikke logget på endnu",
+      "ADDED-DATE": "Oprettet den: ",
+      "GLOBALADMIN": "Global Administrator: ",
       "PERMISSIONS": "Brugergrupper",
       "APPLICATIONS": "Applikationer",
       "NAME-PLACEHOLDER": "Navn"
