--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -303,7 +303,8 @@
       "DEVADDR": "devADDR",
       "NETWORKSESSIONKEY": "Netværks session key",
       "APPLICATIONSESSIONKEY": "Applikation session key",
-      "SKIPFCNTCHECK": "skipfcntcheck"
+      "SKIPFCNTCHECK": "skipfcntcheck",
+      "OTAAAPPLICATIONKEY":"OTAA Applicationkey"
     }
   },
   "MESSAGE": {
