IOT-27 add styling

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -316,6 +316,7 @@
     "LORAWANSETUP": "LoRaWAN Specifik opsætning",
     "LATEST-DATAPACKAGE": "Seneste datapakke sendt fra enheden:",
     "NO-DATAPACKAGE": "Der er ikke modtaget nogle datapakker",
+    "DATAPACKAGE": "Datapakke",
     "LORA": {
       "DEVEUI": "Enheds EUI",
       "SERVICEPROFILE": "Service profil",
