IOT-34 add status to gateway table

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -78,7 +78,9 @@
   "LORA-GATEWAY-TABLE": {
     "NAME": "Navn",
     "GATEWAYID": "Gateway ID",
-    "LOCATION": "Placering"
+    "LOCATION": "Placering",
+    "LAST-SEEN-AT": "Seneste aktivitet",
+    "STATUS": "Status"
   },
   "LORA-GATEWAY-TABLE-ROW": {
     "DELETE": "Slet Gateway",
