--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -419,6 +419,7 @@
     "LASTLOG": "Sidste Login",
     "EDIT": "Redigér User",
     "CREATE": "Opret ny burger",
+    "LOGIN": "Sidst aktiv",
     "TABLE-ROW": {
       "EDIT": "Redigér",
       "DELETE": "Slet"
