--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -272,6 +272,18 @@
       "SELECTALLDEVICES": "Vælg alle",
       "DESELECTALLDEVICES": "Fravælg alle",
       "RELATIONS": "*Efter oprettelse af dit data target parres dette med en/flere payload decoder(s) og IoT-devices"
+    },
+    "SIGFOX": {
+      "REGISTEREDATSIGFOX": "Enheden er allerede registreret i SigFox?",
+      "SIGFOXGRUPPEID":"Vælg SigFox gruppe",
+      "SIGFOXIDENTIFIER": "ID",
+      "SIGFOXIDENTIFIER-PLACEHOLDER": "Enhedens unikke id",
+      "PAC": "PAC",
+      "PAC-PLACEHOLDER": "Porting Authorization Code",
+      "PRODUCTLICENS": "Produkt licens",
+      "PRODUCTLICENS-PLACEHOLDER": "Produkt licens",
+      "PROTOTYPE": "Opret som prototype",
+      "SIGFOXENHEDID": "Vælg enheden er skal oprette i OS2IoT"
     }
   },
   "QUESTION-LORA-GATEWAY": {
