IOT-543 fixed default values for service profile

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -360,9 +360,9 @@
       "DEVICEFREQUENCYEXPLANIED": "Frekvens til at starte en anmodning om end-device (request/dag).",
       "REPORTBATTERYSTATUS": "Rapporter enhedens batteriniveau til applikationsserveren",
       "REPORTBATTERYMARGIN": "Rapporter device link margin til applikationsserver",
-      "DRRATEMIN": "Min date rate",
+      "DRRATEMIN": "Min data rate",
       "DRRATEMINEXPLAINED": "Minimums tilladte data rate. Brugt til ADR",
-      "DRRATEMAX": "Max date rate",
+      "DRRATEMAX": "Max data rate",
       "DRRATEMAXEXPLAINED": "Maximums tilladte data rate. Brugt til ADR",
       "SAVE": "Gem",
       "CANCEL": "Annuller",
