--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -65,7 +65,9 @@
     "RELATIONS": "Tilknyttede IoT enheder og payload decoders",
     "PAYLOADEDECODER": "Payload decoder navn:",
     "IOTDEVICE": "IoT Device navn:",
-    "NO-RELATIONS": "ingen tilknyttede relationer"
+    "NO-RELATIONS": "ingen tilknyttede relationer",
+    "AUTHORIZATIONHEADER": "Authorization header",
+    "NO-AUTHORIZATIONHEADER": "Ingen Authorization header angivet"
   },
   "APPLICATION-TABLE": {
     "NAME": "NAVN",
@@ -235,6 +237,7 @@
     "GIVE-DATATARGET-NAME": "Navngiv datatarget",
     "GIVE-DATATARGET-NAME-PLACEHOLDER": "Datatarget's navn",
     "GIVE-DATATARGET-TIMEOUT": "Timeout",
+    "GIVE-DATATARGET-AUTHORIZATIONHEADER": "Angiv authorization header",
     "GIVE-DATATARGET-URL": "Angiv datatargets URL",
     "GIVE-DATATARGET-URL-PLACEHOLDER": "https://datatarget.dk/data",
     "GIVE-PAYLOADDECODER-NAME": "Navngiv Payload Decoder",
@@ -267,7 +270,7 @@
       "SELECT-DEVICES": "Vælg enheder",
       "SELECTALLDEVICES": "Vælg alle",
       "DESELECTALLDEVICES": "Fravælg alle",
-      "RELATIONS": "Efter oprettelse af dit data target parres dette med en/flere payload decoder(s) og IoT-devices"
+      "RELATIONS": "*Efter oprettelse af dit data target parres dette med en/flere payload decoder(s) og IoT-devices"
     }
   },
   "QUESTION-LORA-GATEWAY": {
