IOT-253 add sigfox dropdown

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -23,7 +23,10 @@
     "PERMISSIONS": "Brugergrupper",
     "USERS": "Brugere",
     "LOGIN": "Login",
-    "ADMIN": "Administration"
+    "ADMIN": "Administration",
+    "SIGFOX": "SigFox",
+    "SIGFOX-ADMIN": "Administration",
+    "SIGFOX-PROFILES": "Profiler"
   },
   "APPLICATION": {
     "CREATE": "Opret applikation",
