IOT-273 add profile skeleton

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -33,6 +33,9 @@
     "ADMINITRATION": {
       "NAME": "SigFox Adminitration",
       "CREATE-NEW-GROUP": "Opret forbindelse til ny gruppe"
+    },
+    "PROFILES": {
+      "NAME": "SigFox Profiler"
     }
   },
   "APPLICATION": {
