IOT-9 add mapper and int with rest. model WIP

--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -39,7 +39,8 @@
       "DROPFILE": "Klik eller drop din .csv file her",
       "NAME": "Navn",
       "TYPE": "Type",
-      "STATUS": "Status",
+      "IMPORTSTATUS": "Status",
+      "ERROR": "Fejl", 
       "EMPTY": "Der er ingen enheder at vise endnu"
     }
   },
