--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -25,7 +25,7 @@
     "LOGIN": "Login",
     "ADMIN": "Administration",
     "SIGFOX": "SigFox",
-    "SIGFOX-ADMIN": "Grupper",
+    "SIGFOX-ADMIN": "Sigfox Administration",
     "SIGFOX-DEVICE-TYPES": "SigFox Enhedstyper"
   },
   "SIGFOX": {
@@ -315,7 +315,7 @@
       "TITLE": "SigFox specifikke felter",
       "CONNECTTOEXISTINGDEVICEINBACKEND": "Enheden er allerede registreret i SigFox?",
       "GROUPID":"Vælg en SigFox gruppe",
-      "DEVICEID": "SigFox enheden",
+      "DEVICEID": "SigFox enhed",
       "DEVICEID-PLACEHOLDER": "Enhedens unikke id",
       "DEVICETYPEID": "Vælg en enhedstypen",
       "DEVICETYPEID-PLACEHOLDER": "Enhedstype",
