--- a/src/assets/i18n/da.json
+++ b/src/assets/i18n/da.json
@@ -405,6 +405,13 @@
       "APPLICATIONSESSIONKEY": "Applikation session key",
       "SKIPFCNTCHECK": "skipfcntcheck",
       "OTAAAPPLICATIONKEY": "OTAA Applicationkey"
+    },
+    "SIGFOX": {
+      "GROUP-NAME": "SigFox gruppe navn",
+      "PROTOTYPE": "Er enheden en prototype",
+      "PAC": "PAC",
+      "ENDPRODUCTCERTIFICATE": "Produkt certifikat",
+      "DEVICETYPE": "Enhedstypen"
     }
   },
   "MESSAGE": {
@@ -529,6 +536,8 @@
     "WELCOME": "Velkommen til OS2IoT",
     "WELCOME-MESSAGE": "Her vises en velkomsthilsen"
   },
+  "false": "Nej",
+  "true": "Ja",
   "HTTP_PUSH": "HTTP Push",
   "Forbidden": "Du har ikke rettigheder til at foretage denne handling"
 }
